<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingVertical="18sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alert_title_fail_get_pokemon"
            android:textColor="@color/red_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:gravity="center"
            android:text="@string/alert_message_fail_get_pokemon"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_reintentar"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:background="@color/green"
            android:text="@string/reintentar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_cerrar"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>