<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/green"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="28dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/header_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="16dp"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/example"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="16sp"
                android:background="@color/cardview_light_background"
                android:elevation="2dp"
                android:gravity="center_vertical"
                android:outlineProvider="background"
                android:paddingHorizontal="16dp"
                android:text="@string/example"
                android:textColor="@android:color/black"
                app:drawableEndCompat="@drawable/ic_desplegate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="12dp"
                android:text="@string/enter_url"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_user_photo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="8dp"
                android:hint="@string/url"
                android:importantForAutofill="no"
                android:inputType="textWebEditText"
                android:paddingHorizontal="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="18dp"
                android:text="@string/enter_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="8dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textWebEditText"
                android:paddingHorizontal="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="24dp"
                android:background="@color/green"
                android:text="@string/apply"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/initials"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_circle_green_edge"
                    android:gravity="center"
                    android:textColor="@color/green"
                    android:textSize="64sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    tools:text="ER"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/initials"
                    android:layout_alignTop="@id/initials"
                    android:layout_alignEnd="@id/initials"
                    android:layout_alignBottom="@id/initials"
                    android:elevation="1dp"
                    android:outlineProvider="none"
                    android:visibility="gone"
                    tools:ignore="ContentDescription"
                    tools:visibility="visible" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>