<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_edge_color"
    android:paddingVertical="12dp">

    <TextView
        android:id="@+id/number_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        tools:text="No. 1000" />

    <CheckBox
        android:id="@+id/check_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:button="@drawable/check_favorites"
        android:gravity="center" />

    <TextView
        android:id="@+id/initials"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_circle_green_edge"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:text="ER" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="CHARMANDER" />

    <LinearLayout
        android:id="@+id/container_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:paddingStart="4dp"
                android:text="@string/altura"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/altura"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:paddingStart="4dp"
                android:text="@string/peso"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/peso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:paddingStart="4dp"
                android:text="@string/tipos"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="7" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_see_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="40dp"
        android:text="@string/ver_underline"
        android:textColor="@color/red_light"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>